insert first content from hg

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <head>
 </head>
 <body>
-<h1>Keuler von der Pratze</h1>
-<p> Schnorrle von Kohorrle <p>
+<h1> Keuler von der Pratze </h1>
+<p> Schnorrle von Kohorrle </p>
+<p> HalloGitty was here </p>
+<p> was here and there </p>
+<h1> HalloWatchdogtimer </p>
 </body>
 </html>
