add quick fix and news WZ8

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <head>
 </head>
 <body>
-<h1>Keuler von der Pratze</h1>
-<p> Schnorrle von Kohorrle <p>
+<h1> Keuler von der Pratze </h1>
+<p> Schnorrle von Kohorrle </p>
+<h2> Vollmond für hellere Nächte </h2>
+<i> Button insert here </i>
+
 </body>
 </html>
+
